@@ -37,55 +37,28 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.7.8</version>
+
                 <executions>
-                    <!-- pre-unit-test execution helps setting up some maven property,
-                      which will be used later by JaCoCo -->
                     <execution>
-                        <id>pre-unit-test</id>
+                        <id>default-prepare-agent</id>
                         <goals>
                             <goal>prepare-agent</goal>
                         </goals>
-                        <configuration>
-                            <destFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</destFile>
-                            <!-- passing property which will contains settings for JaCoCo agent.
-                              If not specified, then "argLine" would be used for "jar" packaging -->
-                            <propertyName>surefireArgLine</propertyName>
-                        </configuration>
                     </execution>
-                    <!-- report phase setup -->
                     <execution>
-                        <id>post-unit-test</id>
-                        <phase>test</phase>
+                        <id>default-report</id>
+                        <phase>prepare-package</phase>
                         <goals>
                             <goal>report</goal>
                         </goals>
-                        <configuration>
-                            <!-- output file with report data. -->
-                            <dataFile>${project.build.directory}/coverage-reports/jacoco-ut.exec</dataFile>
-                            <!-- output directory for the reports. -->
-                            <outputDirectory>${project.reporting.outputDirectory}/jacoco-ut</outputDirectory>
-                        </configuration>
                     </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.19.1</version>
-                <executions>
                     <execution>
-                        <id>default-test</id>
-                        <phase>test</phase>
+                        <id>default-check</id>
                         <goals>
-                            <goal>test</goal>
+                            <goal>check</goal>
                         </goals>
-                        <configuration>
-                            <argLine>${surefireArgLine}</argLine>
-                        </configuration>
                     </execution>
                 </executions>
-                <configuration>
-                    <argLine>-XX:MaxPermSize=512m</argLine>
-                </configuration>
             </plugin>
         </plugins>
     </build>
